example/main.css
.console {
  width: 542px;
  height: 350px;
  border: 1px solid #dddddd;
  overflow-y: hidden;
  overflow-x: hidden;
}

.terminal-output,
.terminal-cursor {
  display: inline-block;
  font-size: 11px;
  font-family: "DejaVu Sans Mono", "Liberation Mono", "Andale Mono", monospace;
}

.terminal-output {
  width: 100%;
  height: 100%;
  padding: 5px;
}

.terminal-output:focus {
  outline: none;
}

.terminal-cursor {
  position: absolute;
  width: 6.778px;
  height: 14px;
  background-color: transparent;
}

.termrow {
  height: 14px;
}

